# pyoculus

./: .buildinfo  .gitignore  Makefile  README.md  README.rst  api.html  fields.html  genindex.html  index.html  installation.html  magneticmaps.html  maps.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  toybox.html  tutorials.html
.doctrees/: api.doctree  environment.pickle  fields.doctree  index.doctree  installation.doctree  magneticmaps.doctree  maps.doctree  toybox.doctree  tutorials.doctree
.doctrees/_autosummary/: pyoculus.doctree  pyoculus.fields.cylindrical_bfield.doctree  pyoculus.fields.cylindrical_bfield_analytic.doctree  pyoculus.fields.cylindrical_grid_interpolated_field.doctree  pyoculus.fields.doctree  pyoculus.fields.m3dc1_bfield.doctree  pyoculus.fields.magnetic_field.doctree  pyoculus.fields.qfm_bfield.doctree  pyoculus.fields.simsopt_bfield.doctree  pyoculus.fields.simsopt_bfield.surf_from_coils.doctree  pyoculus.fields.toroidal_bfield.doctree  pyoculus.fields.two_waves.doctree  pyoculus.geo.doctree  pyoculus.geo.interpolate_coordinates.doctree  pyoculus.integrators.base_integrator.doctree  pyoculus.integrators.doctree  pyoculus.integrators.scipyode_integrator.doctree  pyoculus.integrators.sdc_integrator.doctree  pyoculus.maps.base_map.doctree  pyoculus.maps.cylindrical_bfield_section.doctree  pyoculus.maps.cylindrical_bfield_section.njit.doctree  pyoculus.maps.doctree  pyoculus.maps.integrated_map.doctree  pyoculus.maps.standard_map.doctree  pyoculus.maps.standard_map.return_f_t_pure.doctree  pyoculus.maps.standard_map.standardmap_f_pure.doctree  pyoculus.maps.standard_map.standardmap_frev_pure.doctree  pyoculus.maps.tokamap.doctree  pyoculus.maps.tokamap.return_f_t_pure.doctree  pyoculus.maps.tokamap.tokamap_f_pure.doctree  pyoculus.maps.tokamap.tokamap_frev_pure.doctree  pyoculus.maps.toroidal_bfield_section.doctree  pyoculus.solvers.base_solver.doctree  pyoculus.solvers.doctree  pyoculus.solvers.fixed_point.doctree  pyoculus.solvers.flux_surface_gr.doctree  pyoculus.solvers.lyapunov_exponent.doctree  pyoculus.solvers.manifold.doctree  pyoculus.solvers.manifold.eig.doctree  pyoculus.solvers.poincare_plot.doctree  (+45 more)
.github/workflows/: documentation.yml  python-app.yml
_autosummary/: pyoculus.fields.cylindrical_bfield.html  pyoculus.fields.cylindrical_bfield_analytic.html  pyoculus.fields.cylindrical_grid_interpolated_field.html  pyoculus.fields.html  pyoculus.fields.m3dc1_bfield.html  pyoculus.fields.magnetic_field.html  pyoculus.fields.qfm_bfield.html  pyoculus.fields.simsopt_bfield.html  pyoculus.fields.simsopt_bfield.surf_from_coils.html  pyoculus.fields.toroidal_bfield.html  pyoculus.fields.two_waves.html  pyoculus.geo.html  pyoculus.geo.interpolate_coordinates.html  pyoculus.html  pyoculus.integrators.base_integrator.html  pyoculus.integrators.html  pyoculus.integrators.scipyode_integrator.html  pyoculus.integrators.sdc_integrator.html  pyoculus.maps.base_map.html  pyoculus.maps.cylindrical_bfield_section.html  pyoculus.maps.cylindrical_bfield_section.njit.html  pyoculus.maps.html  pyoculus.maps.integrated_map.html  pyoculus.maps.standard_map.html  pyoculus.maps.standard_map.return_f_t_pure.html  pyoculus.maps.standard_map.standardmap_f_pure.html  pyoculus.maps.standard_map.standardmap_frev_pure.html  pyoculus.maps.tokamap.html  pyoculus.maps.tokamap.return_f_t_pure.html  pyoculus.maps.tokamap.tokamap_f_pure.html  pyoculus.maps.tokamap.tokamap_frev_pure.html  pyoculus.maps.toroidal_bfield_section.html  pyoculus.solvers.base_solver.html  pyoculus.solvers.fixed_point.html  pyoculus.solvers.flux_surface_gr.html  pyoculus.solvers.html  pyoculus.solvers.lyapunov_exponent.html  pyoculus.solvers.manifold.eig.html  pyoculus.solvers.manifold.html  pyoculus.solvers.poincare_plot.html  (+45 more)
_sources/: magneticmaps.rst.txt
_sources/_autosummary/: pyoculus.fields.rst.txt  pyoculus.fields.simsopt_bfield.rst.txt  pyoculus.fields.simsopt_bfield.surf_from_coils.rst.txt  pyoculus.maps.cylindrical_bfield_section.rst.txt  pyoculus.maps.rst.txt  pyoculus.solvers.manifold.rst.txt  pyoculus.solvers.rst.txt  pyoculus.utils.cyl_cart_transform.rst.txt  pyoculus.utils.plot.rst.txt
doc/: api.md  conf.py  index.rst
doc/src/: api.md  api.rst  conf.py  contents.rst  index.rst  magneticmaps.rst
examples/: hello_pplot.py  plot_doublet.py  simsopt_ncsx.py  standardmap.py  struct_for_chris.mat  toybox_example.py  toybox_ha.ipynb  toybox_ha.py  toybox_tok.ipynb  toybox_tok.py  two_waves.ipynb
examples/simsopt_lhd_like/: simsopt_lhd_like.py
examples/simsopt_quasrs/: simsopt_quasr_0229079.py  simsopt_quasr_0928241.py  simsopt_quasr_1329594.py
pyoculus/: __init__.py
pyoculus/fields/: __init__.py  cylindrical_bfield_analytic.py  cylindrical_grid_interpolated_field.py  simsopt_bfield.py  spec_bfield.py  spectre_bfield.py
pyoculus/geo/: __init__.py  interpolate_coordinates.py
pyoculus/integrators/: __init__.py  base_integrator.py  rk_integrator.py  scipyode_integrator.py
pyoculus/irrationals/: continued_fraction.py
pyoculus/maps/: __init__.py  base_map.py  cylindrical_bfield_section.py  integrated_map.py  spec_problem.py  standard_map.py  tokamap.py  toroidal_bfield_section.py
pyoculus/problems/: __init__.py  base_map.py  bfield_problem.py  cartesian_bfield.py  cylindrical_bfield.py  cylindrical_bfield_analytic.py  cylindrical_problem.py  integrated_map.py  integrated_problem.py  integration_map.py  interpolate_coordinates.py  qfm_bfield.py  simsopt_bfield.py  spec_bfield.py  toroidal_bfield.py  toybox.py  two_waves.py
pyoculus/solvers/: __init__.py  base_solver.py  fixed_point.py  flux_surface_gr.py  lyapunov_exponent.py  manifold.py  poincare_plot.py  qfm.py  resonance_zone.py  resonnance_zone.py
pyoculus/toybox/: __init__.py  cylindrical_toybox.py
pyoculus/utils/: __init__.py  continued_fraction.py  convergence_domain.py  fortran.py  (+2 more)
tests/: dBdX.py  integrators.py  irrationals_continued_fraction.py  solver_manifold_linreg.py  test_fields.py  test_integrators.py  test_irrationals_continued_fraction.py
(+9 files in other folders)
